Got video overlay working correctly. Now it does not overlap the video control buttons.

--- a/client/app/styles/_lx-main-classes.scss
+++ b/client/app/styles/_lx-main-classes.scss
@@ -359,26 +359,16 @@ hr.cl-hr-in-chat-panel {
 
 
 div.cl-center-overlay-outer-div {
-  display: table;
-  box-sizing: border-box;
   position: absolute;
-  top: 0;
-  width: 100%;
-  left: 0;
-  right: 0;
+  left: 50%;
   text-align: center;
+  top: 0;
 }
 
 div.cl-center-overlay-middle-div {
-  display:table-cell;
-  vertical-align: top;
+  position: relative;
+  left: -50%;
 }
-
-div.cl-center-overlay-inner-div {
-  margin-left: auto;
-  margin-right:auto;
-}
-
 
 
 span.cl-overlay-text-span a:hover {
